syntax = "proto2";

package root_crate_path;

message Animal {
  optional string name = 1;
}
service Zoo {
  rpc process_animal(Animal) returns (Animal) {};
}
