syntax = "proto3";

package same_name;

service Foo {
  rpc Foo(stream FooRequest) returns (stream FooResponse) {}
}

message FooRequest {}

message FooResponse {}
